# karukan

./: .gitignore  CLAUDE.md  Cargo.toml  renovate.json
.github/workflows/: dictionary-update.yml  fcitx5-integration-test.yml  karukan-engine-ci.yml  karukan-fcitx5-ci.yml  karukan-im-ci.yml  karukan-macos-ci.yml
dictionary/: manifest.json
docs/: macos-ime-parity.md
karukan-cli/: Cargo.toml
karukan-cli/src/: lib.rs
karukan-engine/: Cargo.toml
karukan-engine/benches/: inference_bench.rs
karukan-engine/src/: dict.rs  kana.rs  learning.rs  lib.rs
karukan-engine/src/kanji/: llamacpp.rs
karukan-engine/src/rewriter/: alphabet.rs  mod.rs  number.rs  symbol.rs
karukan-engine/src/romaji/: converter.rs  mod.rs
karukan-fcitx5/include/: karukan.h
karukan-fcitx5/src/ffi/: mod.rs  query.rs  (+1 more)
karukan-im/: Cargo.toml  README.md
karukan-im/config/: default.toml
karukan-im/src/: dictionary_update.rs  lib.rs
karukan-im/src/config/: settings.rs
karukan-im/src/core/: candidate.rs  keycode.rs  preedit.rs  state.rs
karukan-im/src/core/engine/: chunk.rs  conversion.rs  cursor.rs  display.rs  init.rs  input.rs  mod.rs  mode.rs  strategy.rs  types.rs
karukan-im/src/core/engine/tests/: alphabet.rs  basic.rs  chunks.rs  conversion.rs  cursor.rs  emoji.rs  katakana.rs  learning.rs  live_conversion.rs  mod.rs  mode_toggle.rs  rewriter.rs  strategy.rs  surrounding.rs
karukan-im/src/server/: mod.rs  protocol.rs  tests.rs
karukan-macos/: Makefile  README.md
karukan-macos/scripts/: select_input_source.swift
script/: ime_conversion_endurance.py  ime_quality_loop.sh
(+13 files in other folders)
