[package]
name = "karukan-im"
version = "0.1.0"
edition.workspace = true
description = "Japanese IME engine shared by the fcitx5 and macOS frontends"
license.workspace = true
authors = ["togatoga"]
repository.workspace = true
homepage.workspace = true
keywords = ["japanese", "ime", "input-method"]
categories = ["text-processing", "internationalization"]

[lib]
name = "karukan_im"
path = "src/lib.rs"

# stdio JSON-RPC engine server for the macOS (Swift/InputMethodKit) frontend
[[bin]]
name = "karukan-imserver"
path = "src/bin/karukan-imserver.rs"

[dependencies]
# Core engine
karukan-engine.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
directories = "5"
ureq = "2.12"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
fs2 = "0.4"

# Error handling
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
